client/src/main/styles/components/_drawer.scss
.drawer {
  position: absolute;
  top: 40px;
  left: 0;
  right: 0;
  overflow: hidden;
  height: 4000px;
  max-height: 0;
  transition: max-height 0.2s ease;
  z-index: 30;
  background-color: white;
}
.drawer--visible {
  max-height: 400px;
  border-bottom: 1px solid black;
}
.drawer__overlay {
  position: fixed;
  display: none;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: black;
  opacity: 0;
}
.drawer__overlay--visible {
  opacity: 0.5;
  display: initial;
}
.drawer__scroller {
  max-height: 100%;
  overflow-y: scroll;
}
.drawer__contents {
  width: 768px;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

